--- a/script/data_retrieval.Rmd
+++ b/script/data_retrieval.Rmd
@@ -191,9 +191,10 @@ pop <- pop %>%
 
 ```{r}
 targets <- list("med" = med, "mhi" = mhi, "pci" = pci, "pop" = pop, "pov" = pov, "pub" = pub)
-filenames <- c("medicaid.csv", "median_household_income.csv", "per_capita_income.csv", "population.csv", "poverty.csv", "public_assistance.csv")
+filenames <- c("medicaid", "median_household_income", "per_capita_income", "population", "poverty", "public_assistance")
 
 # MUST BE RUN IN CONSOLE BELOW
-for (i in 1:6) {write_csv(x = targets[[i]], path = paste0("data/", filenames[[i]]), na = "", append = FALSE)}
+for (i in 1:6) {write_csv(x = targets[[i]], path = paste0("data/", filenames[[i]], ".csv"), na = "", append = FALSE)}
+for (i in 1:6) {write_rds(x = targets[[i]], path = paste0("data/", filenames[[i]], ".rds"))}
 ```
 
