--- a/script/data_retrieval.Rmd
+++ b/script/data_retrieval.Rmd
@@ -187,11 +187,32 @@ pop <- pop %>%
   pivot_wider(names_from = Year, values_from = Estimate, names_prefix = "survey_year_")
 ```
 
+
+# Median Home Value
+
+```{r}
+mhv <- f(county = 81, variable = "B25077_001")
+
+mhv <- mhv %>%
+  pivot_wider(names_from = Year, values_from = Estimate, names_prefix = "survey_year_")
+```
+
+# Median Earnings
+
+```{r}
+earn <- f(county = 81, variable = "B20002_001")
+
+earn <- earn %>%
+  pivot_wider(names_from = Year, values_from = Estimate, names_prefix = "survey_year_")
+```
+
+
+
 # Write Data
 
 ```{r}
-targets <- list("med" = med, "mhi" = mhi, "pci" = pci, "pop" = pop, "pov" = pov, "pub" = pub)
-filenames <- c("medicaid", "median_household_income", "per_capita_income", "population", "poverty", "public_assistance")
+targets <- list("med" = med, "mhi" = mhi, "pci" = pci, "pop" = pop, "pov" = pov, "pub" = pub, "mhv" = mhv, "earn" = earn)
+filenames <- c("medicaid", "median_household_income", "per_capita_income", "population", "poverty", "public_assistance", "median_home_value", "median_earnings")
 
 # MUST BE RUN IN CONSOLE BELOW
 for (i in 1:6) {write_csv(x = targets[[i]], path = paste0("data/", filenames[[i]], ".csv"), na = "", append = FALSE)}
