--- a/index.Rmd
+++ b/index.Rmd
@@ -52,9 +52,12 @@ knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE, dpi = 320,
 # Load packages
 library(tidyverse)
 library(sf)
+library(kableExtra)
 
 # Census geographies
 tracts_sf <- read_rds("data/geographies/tracts_sf.rds")
+gc_commissioners <- read_rds("data/geographies/gc_commissioners.rds")
+gso_council <- read_rds("data/geographies/gso_city_council.rds")
 
 # Load data
 pci_county <- read_rds("data/per_capita_income/pci_county.rds")
@@ -87,10 +90,12 @@ chart_colors <- colorRampPalette(c("#112E51", "#97BCE9", "#C1D7F2", "#FFBEA9", "
 
 ## Variable Definition
 
+Per capita income is the mean income computed for every man, woman, and child in a particular group including those living in group quarters. It is derived by dividing the aggregate income of a particular group by the total population in that group. The aggregate used to calculate per capita income is rounded. Per capita income is rounded to the nearest whole dollar.
+
 ## Thematic Maps
 
 ```{r}
-pci_sf %>%
+pci_map <- pci_sf %>%
   ggplot() +
   geom_sf(aes(fill = estimate), color = "white", size = 0.2) +
   scale_fill_gradientn("Estimate", colors = chart_colors(4), na.value = "white",
@@ -102,16 +107,38 @@ pci_sf %>%
   jason_theme +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank())
+
+pci_map
+```
+
+## City Council Overlay
+
+```{r}
+pci_map +
+  geom_sf(data = gso_council, fill = NA, color = "black", size = 0.5) +
+  geom_text(data = as_tibble(st_coordinates(st_centroid(gso_council))), aes(X, Y, label = gso_council$DISTRICT))
+```
+
+## County Commissioner Overlay
+
+```{r}
+pci_map +
+  geom_sf(data = gc_commissioners, fill = NA, color = "black", size = 0.5) +
+  geom_text(data = as_tibble(st_coordinates(st_centroid(gc_commissioners))), aes(X, Y, label = gc_commissioners$DISTRICT))
 ```
 
 # Median Family Income {.chapter}
 
 ## Variable Definition
 
+The median divides the income distribution into two equal parts: one-half of the cases falling below the median income and one-half above the median. For households and families, the median income is based on the distribution of the total number of households and families including those with no income. The median income for individuals is based on individuals 15 years old and over with income. Median income for households, families, and individuals is computed on the basis of a standard distribution. Median income is rounded to the nearest whole dollar. Median income figures are calculated using linear interpolation.
+
+In compiling statistics on family income, the incomes of all members 15 years old and over related to the householder are summed and treated as a single amount. Although the family income statistics cover the past 12 months, the characteristics of individuals and the composition of families refer to the time of interview. Thus, the income of the family does not include amounts received by individuals who were members of the family during all or part of the past 12 months if these individuals no longer resided with the family at the time of interview. Similarly, income amounts reported by individuals who did not reside with the family during the past 12 months but who were members of the family at the time of interview are included. However, the composition of most families was the same during the past 12 months as at the time of interview.
+
 ## Thematic Maps
 
 ```{r}
-mfi_sf %>%
+mfi_map <- mfi_sf %>%
   ggplot() +
   geom_sf(aes(fill = estimate), color = "white", size = 0.2) +
   scale_fill_gradientn("Estimate", colors = chart_colors(4), na.value = "white",
@@ -123,16 +150,38 @@ mfi_sf %>%
   jason_theme +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank())
+
+mfi_map
+```
+
+## City Council Overlay
+
+```{r}
+mfi_map +
+  geom_sf(data = gso_council, fill = NA, color = "black", size = 0.5) +
+  geom_text(data = as_tibble(st_coordinates(st_centroid(gso_council))), aes(X, Y, label = gso_council$DISTRICT))
+```
+
+## County Commissioner Overlay
+
+```{r}
+mfi_map +
+  geom_sf(data = gc_commissioners, fill = NA, color = "black", size = 0.5) +
+  geom_text(data = as_tibble(st_coordinates(st_centroid(gc_commissioners))), aes(X, Y, label = gc_commissioners$DISTRICT))
 ```
 
 # Median Home Value {.chapter}
 
 ## Variable Definition
 
+A housing unit is owner-occupied if the owner or co-owner lives in the unit, even if it is mortgaged or not fully paid for. The owner or co-owner must live in the unit and usually is Person 1 on the questionnaire. The unit is “Owned by you or someone in this household with a mortgage or loan” if it is being purchased with a mortgage or some other debt arrangement such as a deed of trust, trust deed, contract to purchase, land contract, or purchase agreement. The housing unit is also considered owned with a mortgage if there is a home equity line of credit on it. The unit also is considered owned with a mortgage if it is built on leased land and there is a mortgage on the unit. Mobile homes occupied by owners with installment loan balances also are included in this category.
+
+A housing unit is “Owned by you or someone in this household free and clear (without a mortgage or loan)” if there is no mortgage or other similar debt on the house, apartment, or mobile home, including units built on leased land if the unit is owned outright without a mortgage.
+
 ## Thematic Maps
 
 ```{r}
-mhv_sf %>%
+mhv_map <- mhv_sf %>%
   ggplot() +
   geom_sf(aes(fill = estimate), color = "white", size = 0.2) +
   scale_fill_gradientn("Estimate", colors = chart_colors(4), na.value = "white",
@@ -144,16 +193,36 @@ mhv_sf %>%
   jason_theme +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank())
+
+mhv_map
+```
+
+## City Council Overlay
+
+```{r}
+mhv_map +
+  geom_sf(data = gso_council, fill = NA, color = "black", size = 0.5) +
+  geom_text(data = as_tibble(st_coordinates(st_centroid(gso_council))), aes(X, Y, label = gso_council$DISTRICT))
+```
+
+## County Commissioner Overlay
+
+```{r}
+mhv_map +
+  geom_sf(data = gc_commissioners, fill = NA, color = "black", size = 0.5) +
+  geom_text(data = as_tibble(st_coordinates(st_centroid(gc_commissioners))), aes(X, Y, label = gc_commissioners$DISTRICT))
 ```
 
 # Educational Attainment {.chapter}
 
 ## Variable Definition
 
+Data on educational attainment were derived from answers to Question 11 on the 2018 ACS, which was asked of all respondents. Educational attainment data are tabulated for people 18 years old and over. Respondents are classified according to the highest degree or the highest level of school completed. The question included instructions for persons currently enrolled in school to report the level of the previous grade attended or the highest degree received.
+
 ## Thematic Maps
 
 ```{r}
-bach_sf %>%
+bach_map <- bach_sf %>%
   ggplot() +
   geom_sf(aes(fill = pct), color = "white", size = 0.2) +
   scale_fill_gradientn("Estimate", colors = chart_colors(4), na.value = "white",
@@ -165,11 +234,57 @@ bach_sf %>%
   jason_theme +
   theme(axis.text = element_blank(),
         axis.ticks = element_blank())
+
+bach_map
 ```
 
+## City Council Overlay
 
-# Notes on Methodology {.chapter}
+```{r}
+bach_map +
+  geom_sf(data = gso_council, fill = NA, color = "black", size = 0.5) +
+  geom_text(data = as_tibble(st_coordinates(st_centroid(gso_council))), aes(X, Y, label = gso_council$DISTRICT))
+```
+
+## County Commissioner Overlay
+
+```{r}
+bach_map +
+  geom_sf(data = gc_commissioners, fill = NA, color = "black", size = 0.5) +
+  geom_text(data = as_tibble(st_coordinates(st_centroid(gc_commissioners))), aes(X, Y, label = gc_commissioners$DISTRICT))
+```
+
+# Reference {.chapter}
+
+## City Council Districts
+
+```{r}
+gso_council %>%
+  as_tibble() %>%
+  select(DISTRICT, REPRESENTATIVE, -geoms) %>%
+  mutate(REPRESENTATIVE = str_to_title(REPRESENTATIVE)) %>%
+  rename(District = DISTRICT, Representative = REPRESENTATIVE) %>%
+  arrange(District) %>%
+  kable(align = "cc", ) %>%
+  kable_styling(full_width = TRUE) %>%
+  row_spec(row = 0, bold = TRUE, align = "c")
+```
+
+## County Commissioner Districts
+
+```{r}
+gc_commissioners %>%
+  as_tibble() %>%
+  select(DISTRICT, REPRESENTATIVE, -geoms) %>%
+  mutate(REPRESENTATIVE = str_to_title(REPRESENTATIVE)) %>%
+  rename(District = DISTRICT, Representative = REPRESENTATIVE) %>%
+  arrange(District) %>%
+  kable(align = "cc", ) %>%
+  kable_styling(full_width = TRUE) %>%
+  row_spec(row = 0, bold = TRUE, align = "c")
+```
 
 ## Divergent Color Palette
+
 For my thematic maps, I selected a diverging color palette to to bring attention to stark differences in low, medium, and high values. I am following best practice recommendations from The United States Census Bureau and have selected the applied colors based on their recommended diverging color palette. I am also trying to account for Web Content Accessibility Guidelines (WCAG) by meeting or exceeding the recommended color contrast ratio minimum. I believe the colors recommended by The Census Bureau meet these guidelines while also striking an acceptable balance with visual appeal. You can find more information online at The Census Bureau's Data Visualization Standards repository (https://xdgov.github.io/data-design-standards/).
 
